@@ -155,6 +155,48 @@ bool Signal::finishBE(struct packet*& p, int& len) {
   return true;
 }
 
+bool DepositCore::prepare() {
+#ifdef DYSECTAPI_DEPCORE
+  DYSECTVERBOSE(true, "Preparing deposit core action");
+  prepared = true;
+  findAggregates();
+
+  string libraryPath;
+  char *envValue;
+  Domain *domain = owner->getDomain();
+  bool boolRet;
+  vector<Process::ptr>::iterator procIter;
+  ProcessSet::ptr procs;
+  WalkerSet *allWalkers;
+  Process::ptr *proc;
+
+  if(domain == NULL)
+    return DYSECTWARN(false, "Domain not found when preparing DepositCore action");
+
+  allWalkers = domain->getAllWalkers();
+  DYSECTVERBOSE(true, "Preparing deposit core action %d", allWalkers->size());
+
+  envValue = getenv("STAT_PREFIX");
+  if (envValue != NULL)
+    libraryPath = envValue;
+  else
+    libraryPath = STAT_PREFIX;
+  libraryPath += "/lib/libdepositcorewrap.so";
+  for (WalkerSet::iterator i = allWalkers->begin(); i != allWalkers->end(); i++) {
+    ProcDebug *pDebug = dynamic_cast<ProcDebug *>((*i)->getProcessState());
+    proc = &(pDebug->getProc());
+    DYSECTVERBOSE(true, "loading library %s", libraryPath.c_str());
+    // This will fail in launch mode since process hasn't been started yet. We will also try loading the library on finishBE
+    // This will also be called multiple times if multiple probes use this action, but this won't result in any errors
+    if (Backend::loadLibrary(*proc, libraryPath) != OK) {
+      return DYSECTWARN(false, "Failed to add library %s: %s", libraryPath.c_str(), Stackwalker::getLastErrorMsg());
+    }
+  }
+
+  return true;
+#endif //ifdef DYSECTAPI_DEPCORE
+}
+
 bool DepositCore::collect(Dyninst::ProcControlAPI::Process::const_ptr process,
                    Dyninst::ProcControlAPI::Thread::const_ptr thread) {
 #ifdef DYSECTAPI_DEPCORE
@@ -198,7 +240,6 @@ bool DepositCore::finishBE(struct packet*& p, int& len) {
   Process::ptr *proc;
   PID pid;
 
-
   DYSECTVERBOSE(true, "DepositCore::finishBE %d", owner->getProcessCount());
 
   if(aggregates.empty())
@@ -241,15 +282,23 @@ bool DepositCore::finishBE(struct packet*& p, int& len) {
     rank = procIter->first;
     proc = &(procIter->second);
 
+    // TODO: check to see if library already loaded
     DYSECTVERBOSE(true, "loading library %s into rank %d", libraryPath.c_str(), rank);
     if (Backend::loadLibrary(*proc, libraryPath) != OK) { // this will fail if we are in a CB
-      return DYSECTWARN(false, "Failed to add library %s", libraryPath.c_str());
+      return DYSECTWARN(false, "Failed to add library %s: %s", libraryPath.c_str(), Stackwalker::getLastErrorMsg());
     }
     variableName = "globalMpiRank";
     if (Backend::writeModuleVariable(*proc, variableName, libraryPath, &rank, sizeof(int)) != OK) {
       return DYSECTWARN(false, "Failed to write variable %s in %s", variableName.c_str(), libraryPath.c_str());
     }
 
+// When invoked via rpc, the stack may not be reassembled properly
+//    string funcName = "depositcore_wrap_cont";
+//    if (Backend::irpc(*proc, libraryPath, funcName, &rank, sizeof(unsigned long)) != OK) {
+//      return DYSECTWARN(false, "Failed to irpc func %s in %s with %ld", funcName.c_str(), libraryPath.c_str(), rank);
+//    }
+
+// When invoked via rpc, the stack may not be reassembled properly
 //    string funcName = "depositcorewrap_init";
 //    if (Backend::irpc(*proc, libraryPath, funcName, &rank, sizeof(unsigned long)) != OK) {
 //      return DYSECTWARN(false, "Failed to irpc func %s in %s with %ld", funcName.c_str(), libraryPath.c_str(), rank);
