@@ -31,14 +31,20 @@ DysectStatus DysectAPI::defaultProbes() {
   // XXX: Check if probes, handling these events, already is in place
 
   Probe* exit = new Probe(Async::exit(), Domain::world(2000), Acts(Act::trace("Process exited"), Act::detach()), stay);
+  Probe* mpiAbort = new Probe(Code::location("MPI_Abort", true), Domain::world(2000), Acts(Act::trace("MPI_Abort called"), Act::stat()), stay);
+  Probe* pMpiAbort = new Probe(Code::location("PMPI_Abort", true), Domain::world(2000), Acts(Act::trace("PMPI_Abort called"), Act::stat()), stay);
   Probe* segv = new Probe(Async::signal(SIGSEGV), Domain::world(500, true), Acts(Act::trace("Memory violation - segmentation fault"), Act::stackTrace(), Act::stat()));//, Act::detach()));
   Probe* sigbus = new Probe(Async::signal(SIGBUS), Domain::world(500), Act::trace("Memory violation - bus error in function @function()"));
+  Probe* sigkill = new Probe(Async::signal(SIGKILL), Domain::world(500), Acts(Act::trace("SIGKILL received in function @function()"), Act::stat()));
   Probe* fpe = new Probe(Async::signal(SIGFPE), Domain::world(500), Act::trace("Floating point exception in function @function()"));
 
   ProbeTree::addRoot(fpe);
   ProbeTree::addRoot(exit);
+  ProbeTree::addRoot(mpiAbort);
+  ProbeTree::addRoot(pMpiAbort);
   ProbeTree::addRoot(segv);
   ProbeTree::addRoot(sigbus);
+  ProbeTree::addRoot(sigkill);
 
   return DysectOK;
 }
